--- a/habitat-diversity/means-explore.Rmd
+++ b/habitat-diversity/means-explore.Rmd
@@ -41,7 +41,9 @@ means_t <- means_format %>%
          df        = n_MPA + n_REF - 2,
          p_value   = pt(t_score, df, lower.tail = FALSE),
          sig       = if_else(p_value < 0.05, 1, 0),
-         cohens_d  = abs(mean_diff)/(sqrt(((sd_MPA^2*(n_MPA-1))+(sd_REF^2*(n_REF-1)))/df)))
+         cohens_d  = abs(mean_diff)/(sqrt(((sd_MPA^2*(n_MPA-1))+(sd_REF^2*(n_REF-1)))/df)),
+         log_RR    =  log10(mean_MPA/mean_REF))
+        
 
 ```
 
@@ -72,7 +74,7 @@ ggplot(data = means_t %>%
 ggplot(data = means_t %>% 
          filter(group == "CCFRP" & variable == "All Fish" & mlpa_region == "Central")) +
   geom_point(aes(x = year, y = mean_diff, color = sig)) +
-  scale_color_manual(values = c("blue4", "dodgerblue")) +
+  # scale_color_manual(values = c("blue4", "dodgerblue")) +
   facet_wrap(~indicator)
 
   
