--- a/habitat-diversity/means-map.Rmd
+++ b/habitat-diversity/means-map.Rmd
@@ -36,9 +36,10 @@ shp_path <- file.path(path_aurora, shp_dir)
 shp_ca <- file.path(path_aurora, shp_dir, "ca_boundary_wgs84.shp")
 
 
-input_file <- "Ecol_perform_metrics_means_working.xlsx" 
+metrics_file_all <- "processed_data/peformance_metrics_meta_all.csv" 
+metrics_file_1619 <- "processed_data/peformance_metrics_meta_1619.csv" 
 
-map_file <- "mpa-attributes.xlsx"
+map_file <- "Ecol_perform_metrics_means_4regions.geojson"
 
 
 ```
@@ -49,32 +50,71 @@ map_file <- "mpa-attributes.xlsx"
 
 ```{r read inputs, message=FALSE, warning=FALSE}
 
-st_perform_metrics_ci <- st_read(dsn = file.path(path_aurora, cencoos_dir, "sampling_sites_4regions.geojson"))
+# Load the 4 regions geospatial habitat data
+st_perform_metrics_ci <- st_read(dsn = file.path(path_aurora, cencoos_dir, "sampling_sites_4regions.geojson")) 
 
-# map_attributes <-  readxl::read_excel(file.path(data_path, map_file), 
-#                             sheet=1, na = c("NA", "."), trim_ws = T)
+# Removing the years and other info
+st_perform_metrics <- st_perform_metrics_ci %>% 
+  select(affiliated_mpa, group, mlpa_region, mpa_designation, variable, indicator, mpa.year) %>%
+  distinct_all()
+
+# load the performance metrics for all years
+map_attributes_all <- read_csv(file.path(path_aurora, metrics_file_all))
+
+
+# load the performance metrics for 2016-19
+map_attributes_1619 <- read_csv(file.path(path_aurora, metrics_file_1619)) 
+
 
 # Read California border
 ca <- st_read(shp_ca)
-st_crs(ca)
+# st_crs(ca)
 
 
 # st_perform_metrics <- perform_metrics %>% 
 #   st_as_sf(.,coords=c("lon_wgs84", "lat_wgs84"), crs=4326)
 
-
-
 ```
-
+## Check things out
 
 ```{r}
 tm_reg4 <- tm_shape(ca) + 
   tm_borders("black", lwd = .5) +
-tm_shape(st_perform_metrics_ci) + 
+tm_shape(st_perform_metrics) + 
   tm_symbols(col = "mlpa_region",  alpha = 0.8, border.lwd = 0, size = .2, title.col = "Main Regions")
 
 tm_reg4
 
 ```
-## Compute the stats
+## Join the  the stats
+
+
+```{r}
+st_perform_metrics_all <- left_join(st_perform_metrics_ci, map_attributes_all, by = c("group", "affiliated_mpa", "mlpa_region", "variable", "indicator")) %>%
+  mutate(mlpa_region = factor(mlpa_region, levels = c("north","central","island","south")))
+```
+
+
+```{r}
+
+tm_shape(ca) + 
+  tm_borders("black", lwd = .5) +
+# tm_shape(st_perform_metrics_all[is.na(st_perform_metrics_all$RR),]) +
+#                  tm_dots(shape=4, size = 0.5, border.lwd = 0.5) +
+tm_shape(st_perform_metrics_all[!is.na(st_perform_metrics_all$RR),]) + 
+  tm_symbols(col = "RR",  alpha = 0.8, border.lwd = 0, size = .3, title.col = "log Ratio", palette = "Spectral", style = "quantile") 
+```
+
+```{r}
+
+tm_shape(ca) + 
+  tm_borders("black", lwd = .5) +
+# tm_shape(st_perform_metrics_all[is.na(st_perform_metrics_all$RR),]) +
+#                  tm_dots(shape=4, size = 0.5, border.lwd = 0.5) +
+tm_shape(st_perform_metrics_all[!is.na(st_perform_metrics_all$RR),]) + 
+  tm_symbols(col = "RR",  alpha = 0.8, border.lwd = 0, size = .5, title.col = "Main Regions", palette = "Spectral", style = "quantile") + 
+  tm_facets(by = "mlpa_region", ncol = 4)
+```
+
+
 
