--- a/habitat-diversity/means-map.Rmd
+++ b/habitat-diversity/means-map.Rmd
@@ -95,6 +95,132 @@ st_perform_metrics_all <- left_join(st_perform_metrics_ci, map_attributes_all, b
 ```
 
 
+## Log Ratios
+
+```{r  message=FALSE, warning=FALSE}
+tmap_mode("plot")
+
+tm_all_rr <- tm_shape(ca) + 
+  tm_borders("black", lwd = .5) +
+tm_shape(st_perform_metrics_all[!is.na(st_perform_metrics_all$RR),]) + 
+  tm_symbols(col = "RR",  alpha = 0.5, border.lwd = 0, size = .3, title.col = "Log Ratios", palette = "Spectral", style = "quantile", legend.hist = TRUE) + 
+  tm_layout(legend.outside = TRUE) 
+
+tm_all_rr
+
+tmap_save(tm_all_rr, filename = "../figs/mpa_RR_all.png")
+```
+
+```{r  message=FALSE, warning=FALSE}
+tmap_mode("plot")
+
+tm_ncis_rr <- tm_shape(ca) + 
+  tm_borders("black", lwd = .5) +
+tm_shape(st_perform_metrics_all[!is.na(st_perform_metrics_all$RR),]) + 
+  tm_symbols(col = "RR",  alpha = 0.8, border.lwd = 0, size = .5, title.col = "Main Regions", palette = "Spectral", style = "quantile") + 
+  tm_facets(by = "mlpa_region", ncol = 4, free.coords = T, inside.original.bbox = F)
+
+tm_ncis_rr
+
+tmap_save(tm_ncis_rr, filename = "../figs/mpa_RR_ncis.png")
+```
+
+```{r  message=FALSE, warning=FALSE}
+tmap_mode("plot")
+
+tm_is_rr <- tm_shape(ca) + 
+  tm_borders("black", lwd = .5) +
+tm_shape(st_perform_metrics_all[!is.na(st_perform_metrics_all$RR),] %>% filter(mlpa_region %in% c("island", "south"))) + 
+  tm_symbols(col = "RR",  alpha = 0.8, border.lwd = 0, size = .5, title.col = "North Region Log Ratios", palette = "Spectral", style = "quantile") + 
+  tm_facets(by = "mlpa_region",  free.coords = T)
+
+tm_is_rr
+
+tmap_save(tm_is_rr, filename = "../figs/mpa_RR_is.png")
+
+```
+
+```{r  message=FALSE, warning=FALSE}
+tmap_mode("plot")
+
+tm_is_rr <- tm_shape(ca) + 
+  tm_borders("black", lwd = .5) +
+tm_shape(st_perform_metrics_all[!is.na(st_perform_metrics_all$RR),] %>% filter(mlpa_region %in% c("island", "south"))) + 
+  tm_symbols(col = "RR",  alpha = 0.8, border.lwd = 0, size = .5, title.col = "North Region Log Ratios", palette = "Spectral", style = "quantile") + 
+  tm_facets(by = "mlpa_region",  free.coords = T)
+
+tm_is_rr
+
+tmap_save(tm_is_rr, filename = "../figs/mpa_RR_is.png")
+
+```
+
+### Per region
+
+```{r}
+tm_n_rr <- 
+tm_shape(st_perform_metrics_all[!is.na(st_perform_metrics_all$RR),] %>% filter(mlpa_region == "north")) + 
+  tm_symbols(col = "RR",  alpha = 0.8, border.lwd = 0, size = .5, title.col = "Main Regions", palette = "Spectral", breaks = c(-1.975,-0.080, 0.010, 0.061, 0.122, 1.496)) +
+  tm_shape(ca) + 
+  tm_borders("black", lwd = .5) +
+  tm_layout(legend.show = FALSE)
+
+tm_n_rr
+
+tmap_save(tm_n_rr, filename = "../figs/mpa_RR_n.png")
+
+```
+
+
+```{r}
+tm_c_rr <- 
+tm_shape(st_perform_metrics_all[!is.na(st_perform_metrics_all$RR),] %>% filter(mlpa_region == "central")) + 
+  tm_symbols(col = "RR",  alpha = 0.8, border.lwd = 0, size = .5, title.col = "Main Regions", palette = "Spectral", breaks = c(-1.975, -0.080, 0.010, 0.061, 0.122, 1.496)) +
+  tm_shape(ca) + 
+  tm_borders("black", lwd = .5)  +
+  tm_layout(legend.show = FALSE)
+
+tm_c_rr
+
+tmap_save(tm_c_rr, filename = "../figs/mpa_RR_c.png")
+
+```
+
+```{r}
+tm_i_rr <- 
+tm_shape(st_perform_metrics_all[!is.na(st_perform_metrics_all$RR),] %>% filter(mlpa_region == "island")) + 
+  tm_symbols(col = "RR",  alpha = 0.8, border.lwd = 0, size = .5, title.col = "Main Regions", palette = "Spectral", breaks = c(-1.975, -0.080, 0.010, 0.061, 0.122, 1.496)) +
+  tm_shape(ca) + 
+  tm_borders("black", lwd = .5) +
+  tm_layout(legend.show = FALSE)
+
+tm_i_rr
+
+tmap_save(tm_i_rr, filename = "../figs/mpa_RR_i.png")
+
+```
+
+```{r}
+tm_s_rr <- 
+tm_shape(st_perform_metrics_all[!is.na(st_perform_metrics_all$RR),] %>% filter(mlpa_region == "south")) + 
+  tm_symbols(col = "RR",  alpha = 0.8, border.lwd = 0, size = .5, title.col = "Main Regions", palette = "Spectral", breaks = c(-1.975, -0.080, 0.010, 0.061, 0.122, 1.496)) +
+  tm_shape(ca) + 
+  tm_borders("black", lwd = .5)
+
+tm_s_rr
+
+tmap_save(tm_s_rr, filename = "../figs/mpa_RR_s.png")
+```
+
+```{r}
+
+tmap_all <- tmap_arrange(tm_n_rr, tm_c_rr, tm_i_rr, tm_s_rr)
+
+tmap_all
+tmap_save(tmap_all, filename = "../figs/mpa_RR_ncis.png")
+```
+
+
 ## Difference in means
 
 
@@ -126,51 +252,7 @@ tm_ncis_means
 tmap_save(tm_ncis_means, filename = "../figs/mpa_means_nc.png")
 ```
 
-## Log Ratios
 
-```{r  message=FALSE, warning=FALSE}
-tmap_mode("plot")
-
-tm_all_rr <- tm_shape(ca) + 
-  tm_borders("black", lwd = .5) +
-# tm_shape(st_perform_metrics_all[is.na(st_perform_metrics_all$RR),]) +
-#                  tm_dots(shape=4, size = 0.5, border.lwd = 0.5) +
-tm_shape(st_perform_metrics_all[!is.na(st_perform_metrics_all$RR),]) + 
-  tm_symbols(col = "RR",  alpha = 0.5, border.lwd = 0, size = .3, title.col = "log Ratio", palette = "Spectral", style = "quantile") 
-
-tm_all_rr
-
-tmap_save(tm_all_rr, filename = "../figs/mpa_RR_all.png")
-```
-
-```{r  message=FALSE, warning=FALSE}
-tmap_mode("plot")
-
-tm_ncis_rr <- tm_shape(ca) + 
-  tm_borders("black", lwd = .5) +
-tm_shape(st_perform_metrics_all[!is.na(st_perform_metrics_all$RR),]) + 
-  tm_symbols(col = "RR",  alpha = 0.8, border.lwd = 0, size = .5, title.col = "Main Regions", palette = "Spectral", style = "quantile") + 
-  tm_facets(by = "mlpa_region", ncol = 4, free.coords = T, inside.original.bbox = F)
-
-tm_ncis_rr
-
-tmap_save(tm_ncis_rr, filename = "../figs/mpa_RR_nc.png")
-```
-
-```{r  message=FALSE, warning=FALSE}
-tmap_mode("plot")
-
-tm_is_rr <- tm_shape(ca) + 
-  tm_borders("black", lwd = .5) +
-tm_shape(st_perform_metrics_all[!is.na(st_perform_metrics_all$RR),] %>% filter(mlpa_region %in% c("island", "south"))) + 
-  tm_symbols(col = "RR",  alpha = 0.8, border.lwd = 0, size = .5, title.col = "Main Regions", palette = "Spectral", style = "quantile") + 
-  tm_facets(by = "mlpa_region",  free.coords = T)
-
-tm_is_rr
-
-tmap_save(tm_is_rr, filename = "../figs/mpa_RR_is.png")
-
-```
 
 ## Diversity
 ```{r  message=FALSE, warning=FALSE}
