adding writing files

--- a/data-processing/inaturalist_algae.Rmd
+++ b/data-processing/inaturalist_algae.Rmd
@@ -100,6 +100,8 @@ tm_shape(mpa_inat_count) +
   tm_symbols(col = "n_unique",  alpha = 0.5, border.lwd = 0, size = .2, title.col = "iNaturalist unique observers", palette = "-plasma", style = "quantile")
 
 tm_count
+
+tmap_save(tm_count, filename = "../figs/inat_unique_obs.png")
 ```
 ### Compute the total observations
 
@@ -114,11 +116,13 @@ mpa_inat_count_all <- mpa_inat %>%
 
 
 ```{r}
-tm_count <- tm_shape(ca) + 
+tm_count_total <- tm_shape(ca) + 
   tm_borders("black", lwd = .5) +
 tm_shape(mpa_inat_count_all) + 
   tm_symbols(col = "n_total",  alpha = 0.5, border.lwd = 0, size = .2, title.col = "iNaturalist total # of Obsv.", palette = "-plasma", style = "quantile")
 
-tm_count
+tm_count_total
+
+tmap_save(tm_count_total, filename = "../figs/inat_all_obs.png")
 ```
 
